--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,8 +20,8 @@ Description: Assists in automating the testing of terms in mixed models when 'as
   models that conform to the hierarchy or marginality principle and for displaying predictions 
   for significant terms in tables and graphs. The packages 'asreml' and 'asreml4' provide a 
   computationally efficient algorithm for fitting mixed models using Residual Maximum 
-  Likelihood. They are proprietary packages that can be purchased from 
+  Likelihood. They are commercial packages that can be purchased from 
   'VSNi' <http://www.vsni.co.uk/> as 'asreml-R', who will supply a zip file for local 
   installation/updating. 
-License: BSD_3_clause + file LICENSE
+License: MIT + file LICENSE
 URL: http://chris.brien.name
