--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,10 +18,11 @@ Description: Assists in automating the testing of terms in mixed models when 'as
   (vii) Response transformation functions, and (viii) Miscellaneous functions. A history of the 
   fitting of a sequence of models is kept in a data frame. Procedures are available for choosing 
   models that conform to the hierarchy or marginality principle and for displaying predictions 
-  for significant terms in tables and graphs. The packages 'asreml' and 'asreml4' provide a 
+  for significant terms in tables and graphs. The 'asreml' package provides a 
   computationally efficient algorithm for fitting mixed models using Residual Maximum 
   Likelihood. They are commercial packages that can be purchased from 
   'VSNi' <http://www.vsni.co.uk/> as 'asreml-R', who will supply a zip file for local 
-  installation/updating. 
+  installation/updating. The package 'asremPlus' can also be installed from 
+  <http://chris.brien.name/rpackages/>.
 License: MIT + file LICENSE
 URL: http://chris.brien.name
