--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,28 +1,31 @@
 Package: asremlPlus
-Version: 4.1-08
-Date: 2018-12-10
-Title: Augments the Use of 'ASReml-R' and 'ASReml4-R' in Fitting Mixed Models
+Version: 4.1-10
+Date: 2019-01-08
+Title: Augments 'ASReml-R' in Fitting Mixed Models and Packages Generally in Exploring Prediction Differences
 Author: Chris Brien <Chris.Brien@unisa.edu.au>.
 Maintainer: Chris Brien <Chris.Brien@unisa.edu.au>
 Depends: 
     R (>= 3.1.0)
 Imports: dae, ggplot2, stats, methods, utils, reshape, plyr, dplyr, stringr, 
          RColorBrewer, grDevices, foreach, parallel, doParallel
-Suggests: testthat, lattice
+Suggests: testthat, lattice, emmeans, lmerTest, pbkrtest
 Enhances: asreml
 SystemRequirements: asreml-R 2.x
-Description: Assists in automating the testing of terms in mixed models when 'asreml' is used 
-  to fit the models. The content falls into the following natural groupings: (i) Data, (ii) Object 
+Description: Assists in automating the testing of terms in mixed models when 'asreml' is 
+  used to fit the models. Also used to display, in tables and graphs, predictions obtained  
+  using any model fitting function and to explore differences between predictions. 
+  The content  falls into the following natural groupings: (i) Data, (ii) Object 
   manipulation functions, (iii) Model modification functions, (iv) Model testing functions, 
   (v) Model diagnostics functions, (vi) Prediction production and presentation functions, 
-  (vii) Response transformation functions, and (viii) Miscellaneous functions. A history of the 
-  fitting of a sequence of models is kept in a data frame. Procedures are available for choosing 
-  models that conform to the hierarchy or marginality principle and for displaying predictions 
-  for significant terms in tables and graphs. The 'asreml' package provides a 
+  (vii) Response transformation functions, and (viii) Miscellaneous functions. A history of 
+  the fitting of a sequence of models is kept in a data frame. Procedures are available for 
+  choosing models that conform to the hierarchy or marginality principle and for displaying 
+  predictions for significant terms in tables and graphs. The 'asreml' package provides a 
   computationally efficient algorithm for fitting mixed models using Residual Maximum 
-  Likelihood. They are commercial packages that can be purchased from 
+  Likelihood. It is a commercial packages that can be purchased from 
   'VSNi' <http://www.vsni.co.uk/> as 'asreml-R', who will supply a zip file for local 
-  installation/updating. The package 'asremPlus' can also be installed from 
+  installation/updating. It is not needed for functions that are methods for 'alldiffs'  
+  and 'data.frame' objects. The package 'asremPlus' can also be installed from 
   <http://chris.brien.name/rpackages/>.
 License: MIT + file LICENSE
 URL: http://chris.brien.name
