--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: asremlPlus
-Version: 4.1-36
-Date: 2020-01-12
+Version: 4.1-37
+Date: 2020-01-27
 Title: Augments 'ASReml-R' in Fitting Mixed Models and Packages Generally in Exploring Prediction Differences
 Authors@R: person("Chris","Brien", role = c("aut","cre"),
          comment = c(ORCID = "0000-0003-0581-1817"),
@@ -24,10 +24,10 @@ Description: Assists in automating the testing of terms in mixed models when 'as
   choosing models that conform to the hierarchy or marginality principle and for displaying 
   predictions for significant terms in tables and graphs. The 'asreml' package provides a 
   computationally efficient algorithm for fitting mixed models using Residual Maximum 
-  Likelihood. It is a commercial packages that can be purchased from 
+  Likelihood. It is a commercial package that can be purchased from 
   'VSNi' <http://www.vsni.co.uk/> as 'asreml-R', who will supply a zip file for local 
-  installation/updating. It is not needed for functions that are methods for 'alldiffs'  
-  and 'data.frame' objects. The package 'asremPlus' can also be installed from 
-  <http://chris.brien.name/rpackages/>.
+  installation/updating (see <http://asreml.org/>). It is not needed for functions that are 
+  methods for 'alldiffs'  and 'data.frame' objects. The package 'asremPlus' can also be 
+  installed from <http://chris.brien.name/rpackages/>.
 License: MIT + file LICENSE
 URL: http://chris.brien.name
