--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,25 +1,26 @@
 Package: asremlPlus
-Version: 4.1-37
-Date: 2020-01-27
+Version: 4.2-10
+Date: 2020-02-07
 Title: Augments 'ASReml-R' in Fitting Mixed Models and Packages Generally in Exploring Prediction Differences
 Authors@R: person("Chris","Brien", role = c("aut","cre"),
          comment = c(ORCID = "0000-0003-0581-1817"),
          email = "chris.brien@unisa.edu.au")
 Depends: 
-    R (>= 3.1.0)
+    R (>= 3.5.0)
 Imports: dae, ggplot2, stats, methods, utils, reshape, plyr, dplyr, stringr, 
          RColorBrewer, grDevices, foreach, parallel, doParallel
 Suggests: testthat, lattice, emmeans, lmerTest, pbkrtest, R.rsp
 Enhances: asreml
 VignetteBuilder: R.rsp
 SystemRequirements: asreml-R 2.x
-Description: Assists in automating the testing of terms in mixed models when 'asreml' is 
-  used to fit the models. Also used to display, in tables and graphs, predictions obtained  
-  using any model fitting function and to explore differences between predictions. 
+Description: Assists in automating the selection of terms toinclude in mixed models when  
+  'asreml' isused to fit the models. Also used to display, in tables and graphs, predictions   
+  obtained using any model fitting function and to explore differences between predictions. 
   The content  falls into the following natural groupings: (i) Data, (ii) Object 
   manipulation functions, (iii) Model modification functions, (iv) Model testing functions, 
   (v) Model diagnostics functions, (vi) Prediction production and presentation functions, 
-  (vii) Response transformation functions, and (viii) Miscellaneous functions. A history of 
+  (vii) Response transformation functions, and (viii) Miscellaneous functions (for further 
+  details see 'asremlPlus-package' in help). A history of 
   the fitting of a sequence of models is kept in a data frame. Procedures are available for 
   choosing models that conform to the hierarchy or marginality principle and for displaying 
   predictions for significant terms in tables and graphs. The 'asreml' package provides a 
