--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: asremlPlus
-Version: 4.2-18
-Date: 2020-03-16
+Version: 4.2-19
+Date: 2020-04-02
 Title: Augments 'ASReml-R' in Fitting Mixed Models and Packages Generally in Exploring Prediction Differences
 Authors@R: person("Chris","Brien", role = c("aut","cre"),
          comment = c(ORCID = "0000-0003-0581-1817"),
-         email = "chris.brien@unisa.edu.au")
+         email = "chris.brien@adelaide.edu.au")
 Depends: 
     R (>= 3.5.0)
 Imports: dae, ggplot2, stats, methods, utils, reshape, plyr, dplyr, stringr, 
