--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: asremlPlus
-Version: 4.2-36
-Date: 2021-05-16
+Version: 4.3-10
+Date: 2021-07-05
 Title: Augments 'ASReml-R' in Fitting Mixed Models and Packages
         Generally in Exploring Prediction Differences
 Authors@R: person("Chris","Brien", role = c("aut","cre"),
@@ -13,6 +13,7 @@ Suggests: testthat, lattice, emmeans, lmerTest, pbkrtest, R.rsp
 Enhances: asreml
 VignetteBuilder: R.rsp
 SystemRequirements: asreml-R 2.x
+LazyData: true
 Description: Assists in automating the selection of terms to include in mixed models when  
   'asreml' is used to fit the models. Also used to display, in tables and graphs, predictions   
   obtained using any model fitting function and to explore differences between predictions. 
