--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,8 @@ export(addBacktransforms,
        getASRemlVersionLoaded,
        getFormulae,
        getFormulae.asreml,
+       getTestEntry,
+       getTestEntry.asrtests,
        getTestPvalue,
        getTestPvalue.asrtests,
        infoCriteria,
@@ -54,6 +56,8 @@ export(addBacktransforms,
        newfit.asreml,
        newrcov.asrtests,
        num.recode,
+       pairdiffsTransform,
+       pairdiffsTransform.alldiffs,
        permute.square,
        permute.to.zero.lowertri,
        plotPredictions,
@@ -79,6 +83,8 @@ export(addBacktransforms,
        print.wald.tab, 
        printFormulae,
        printFormulae.asreml,
+       ratioTransform,
+       ratioTransform.alldiffs,
        recalcLSD, 
        recalcLSD.alldiffs, 
        recalcWaldTab,
@@ -123,7 +129,7 @@ export(addBacktransforms,
 exportClasses(alldiffs, asrtests, predictions.frame)
 import(dae, ggplot2)
 importFrom("stats", "as.formula", "fitted", "fitted.values", "formula", "median", 
-                    "model.matrix", "na.omit", "pchisq", "pf", "predict", "pt", "qt", 
+                    "model.matrix", "na.omit", "pchisq", "pf", "predict", "pt", "qnorm", "qt", 
                     "quantile", "resid", "rnorm","simulate", "terms", "terms.formula", 
                     "update.formula")
 importFrom("RColorBrewer", "brewer.pal")
@@ -149,6 +155,7 @@ S3method(facRecast, alldiffs)
 S3method(facRecode, alldiffs)
 S3method(facRename, alldiffs)
 S3method(getFormulae, asreml)
+S3method(getTestEntry, asrtests)
 S3method(getTestPvalue, asrtests)
 S3method(infoCriteria, asreml) 
 S3method(infoCriteria, list) 
@@ -167,6 +174,8 @@ S3method(print, predictions.frame)
 S3method(print, test.summary)
 S3method(print, wald.tab)
 S3method(printFormulae, asreml)
+S3method(pairdiffsTransform, alldiffs)
+S3method(ratioTransform, alldiffs)
 S3method(recalcWaldTab, asrtests)
 S3method(REMLRT, asreml) 
 S3method(recalcLSD, alldiffs)
@@ -178,6 +187,7 @@ S3method(rmboundary, asrtests)
 S3method(setvarianceterms, call)
 S3method(simulate, asreml)
 S3method(sort, alldiffs)
+S3method(sort, predictions.frame)
 S3method(subset, alldiffs)
 S3method(testranfix, asreml)
 S3method(testranfix, asrtests)
