Major revision of LSD facilities

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -110,6 +110,7 @@ export(addBacktransforms,
        sig.devn.reparam.asrtests,
        simulate.asreml,
        sort.alldiffs,
+       sort.predictions.frame,
        subset.alldiffs,
        testrcov.asreml,
        testrcov.asrtests,
