--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: asremlPlus
-Version: 4.3-11
-Date: 2021-07-28
+Version: 4.3-12
+Date: 2021-08-11
 Title: Augments 'ASReml-R' in Fitting Mixed Models and Packages
         Generally in Exploring Prediction Differences
 Authors@R: person("Chris","Brien", role = c("aut","cre"),
@@ -8,7 +8,7 @@ Authors@R: person("Chris","Brien", role = c("aut","cre"),
          email = "chris.brien@adelaide.edu.au")
 Depends: R (>= 3.5.0)
 Imports: dae, ggplot2, stats, methods, utils, reshape, plyr, dplyr,
-        stringr, RColorBrewer, grDevices, foreach, parallel, doParallel
+        stringr, RColorBrewer, grDevices, graphics, foreach, parallel, doParallel
 Suggests: testthat, lattice, emmeans, lmerTest, pbkrtest, R.rsp
 Enhances: asreml
 VignetteBuilder: R.rsp
