--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,8 @@ export(addBacktransforms,
        choose.model.asrtests,
        estimateV,
        estimateV.asreml,
+       exploreLSDs,
+       exploreLSDs.alldiffs,
        facCombine,
        facCombine.alldiffs,
        facRecast,
@@ -60,6 +62,9 @@ export(addBacktransforms,
        pairdiffsTransform.alldiffs,
        permute.square,
        permute.to.zero.lowertri,
+       plotLSDs, 
+       plotLSDs.data.frame,
+       plotLSDs.alldiffs,
        plotPredictions,
        plotPredictions.data.frame,
        plotPvalues, 
@@ -112,6 +117,7 @@ export(addBacktransforms,
        sort.alldiffs,
        sort.predictions.frame,
        subset.alldiffs,
+       subset.list,
        testrcov.asreml,
        testrcov.asrtests,
        testresidual,
@@ -135,6 +141,7 @@ importFrom("stats", "as.formula", "fitted", "fitted.values", "formula", "median"
                     "update.formula")
 importFrom("RColorBrewer", "brewer.pal")
 importFrom("grDevices", "savePlot")
+importFrom("graphics", "hist")
 importFrom("dplyr", "anti_join")
 importFrom("methods", "languageEl", "languageEl<-", "validObject")
 importFrom("reshape", "melt")
@@ -151,6 +158,7 @@ S3method(changeTerms, asrtests)
 S3method(chooseModel, asrtests) 
 S3method(chooseModel, data.frame) 
 S3method(estimateV, asreml) 
+S3method(exploreLSDs, alldiffs) 
 S3method(facCombine, alldiffs)
 S3method(facRecast, alldiffs)
 S3method(facRecode, alldiffs)
@@ -165,6 +173,8 @@ S3method(linTransform, alldiffs)
 S3method(newfit, asreml) 
 S3method(plotPredictions, data.frame)
 S3method(plotPvalues, alldiffs)
+S3method(plotLSDs, data.frame)
+S3method(plotLSDs, alldiffs)
 S3method(plotPvalues, data.frame)
 S3method(plotVariofaces, data.frame)
 S3method(predictPresent, asreml)
@@ -190,6 +200,7 @@ S3method(simulate, asreml)
 S3method(sort, alldiffs)
 S3method(sort, predictions.frame)
 S3method(subset, alldiffs)
+S3method(subset, list)
 S3method(testranfix, asreml)
 S3method(testranfix, asrtests)
 S3method(testresidual, asrtests)
