Add allow.fixedcorrelation to model-change functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -170,6 +170,7 @@ S3method(getTestEntry, asrtests)
 S3method(getTestPvalue, asrtests)
 S3method(infoCriteria, asreml) 
 S3method(infoCriteria, list) 
+S3method(isFixedCorrelOK, asreml) 
 S3method(iterate, asrtests) 
 S3method(linTransform, alldiffs)
 S3method(newfit, asreml) 
