--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,7 @@
 export(addBacktransforms,
        addBacktransforms.alldiffs,
+       addSpatialModel.asrtests, 
+       addSpatialModel, 
        addSpatialModelOnIC.asrtests, 
        addSpatialModelOnIC, 
        addrm.terms.asreml,
@@ -166,6 +168,7 @@ importFrom("stringr", "str_count", "str_length", "str_locate", "str_locate_all",
            "str_split", "str_sub", "str_trim")
 importFrom("sticky", "sticky")
 S3method(addBacktransforms, alldiffs)
+S3method(addSpatialModel, asrtests)
 S3method(addSpatialModelOnIC, asrtests)
 S3method(allDifferences, data.frame)
 S3method(changeModelOnIC, asrtests)
