--- a/NAMESPACE
+++ b/NAMESPACE
@@ -158,12 +158,13 @@ importFrom("RColorBrewer", "brewer.pal")
 importFrom("grDevices", "savePlot")
 importFrom("graphics", "hist")
 importFrom("dplyr", "anti_join")
-importFrom("methods", "formalArgs", "languageEl", "languageEl<-", "validObject")
+importFrom("methods", "formalArgs", "getFunction", "languageEl", "languageEl<-", "validObject")
 importFrom("reshape2", "melt")
 importFrom("utils", "data", "capture.output", sessionInfo, "tail")
 importFrom("foreach", "foreach", "%do%", "%dopar%")
 importFrom("parallel", "makeCluster", "stopCluster", "detectCores", "nextRNGStream")
 importFrom("doParallel", "registerDoParallel")
+importFrom("rlang", "ns_env")
 importFrom("stringr", "str_count", "str_length", "str_locate", "str_locate_all", "str_replace", "str_replace_all", 
            "str_split", "str_sub", "str_trim")
 importFrom("sticky", "sticky")
