--- a/NAMESPACE
+++ b/NAMESPACE
@@ -152,7 +152,7 @@ exportClasses(alldiffs, asrtests, predictions.frame)
 import(dae, ggplot2)
 importFrom("stats", "as.formula",  "fitted", "fitted.values", "formula", "median", 
                     "model.matrix", "na.omit", "pchisq", "pf", "predict", "pt", "qnorm", "qt", 
-                    "quantile", "resid", "rnorm","simulate", "terms", "terms.formula", 
+                    "quantile", "resid", "pnorm", "rnorm","simulate", "terms", "terms.formula", 
                     "update.formula")
 importFrom("RColorBrewer", "brewer.pal")
 importFrom("grDevices", "savePlot")
@@ -164,7 +164,7 @@ importFrom("utils", "data", "capture.output", sessionInfo, "tail")
 importFrom("foreach", "foreach", "%do%", "%dopar%")
 importFrom("parallel", "makeCluster", "stopCluster", "detectCores", "nextRNGStream")
 importFrom("doParallel", "registerDoParallel")
-importFrom("rlang", "ns_env")
+importFrom("rlang", "call_match", "call_name", "ns_env")
 importFrom("stringr", "str_count", "str_length", "str_locate", "str_locate_all", "str_replace", "str_replace_all", 
            "str_split", "str_sub", "str_trim")
 importFrom("sticky", "sticky")
