--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: asremlPlus
-Version: 4.3.51
-Date: 2023-04-03
+Version: 4.3.55
+Date: 2023-06-13
 Title: Augments 'ASReml-R' in Fitting Mixed Models and Packages
         Generally in Exploring Prediction Differences
 Authors@R: person("Chris","Brien", role = c("aut","cre"),
@@ -8,7 +8,7 @@ Authors@R: person("Chris","Brien", role = c("aut","cre"),
          email = "chris.brien@adelaide.edu.au")
 Depends: R (>= 3.5.0)
 Imports: dae, doParallel, dplyr,ggplot2, foreach, grDevices, graphics, methods, parallel, 
-        reshape2, RColorBrewer, rlang, stats, stringr, sticky, utils
+        qqplotr, reshape2, RColorBrewer, rlang, stats, stringr, sticky, utils
 Suggests: testthat, lattice, emmeans, lmerTest, pbkrtest, R.rsp
 Enhances: asreml
 VignetteBuilder: R.rsp
