--- a/NAMESPACE
+++ b/NAMESPACE
@@ -126,7 +126,7 @@ export(addBacktransforms,
        rmboundary.asreml,
        setvarianceterms,
        setvarianceterms.call,
-       setvarianceterms.asreml, #must be included as deprecated
+       setvarianceterms.asreml,
        sig.devn.reparam.asreml,
        sig.devn.reparam.asrtests,
        simulate.asreml,
@@ -150,23 +150,25 @@ export(addBacktransforms,
        variofaces,
        variofaces.asreml)
 exportClasses(alldiffs, asrtests, predictions.frame)
-import(dae, ggplot2, except = "stat_qq_line")
+import(dae)
+import(ggplot2, except = "stat_qq_line")
 importFrom("stats", "as.formula",  "fitted", "fitted.values", "formula", "median", 
                     "model.matrix", "na.omit", "pchisq", "pf", "predict", "pt", "qnorm", "qt", 
                     "quantile", "resid", "pnorm", "rnorm","simulate", "terms", "terms.formula", 
                     "update.formula")
+importFrom("devtools", "load_all")
 importFrom("RColorBrewer", "brewer.pal")
 importFrom("grDevices", "savePlot")
 importFrom("graphics", "hist")
 importFrom("dplyr", "anti_join")
 importFrom("methods", "formalArgs", "getFunction", "languageEl", "languageEl<-", "validObject")
-importFrom("qqplotr", "stat_qq_band", "stat_qq_line", "stat_qq_point")
+importFrom("qqplotr", "stat_qq_band","stat_qq_line", "stat_qq_point")
+
 importFrom("reshape2", "melt")
-importFrom("utils", "data", "capture.output", sessionInfo, "tail")
+importFrom("utils", "data", "capture.output", "getFromNamespace", sessionInfo, "tail")
 importFrom("foreach", "foreach", "%do%", "%dopar%")
 importFrom("parallel", "makeCluster", "stopCluster", "detectCores", "nextRNGStream")
 importFrom("doParallel", "registerDoParallel")
-importFrom("rlang", "call_match", "call_name", "ns_env")
 importFrom("stringr", "str_count", "str_length", "str_locate", "str_locate_all", "str_replace", "str_replace_all", 
            "str_split", "str_sub", "str_trim")
 importFrom("sticky", "sticky")
@@ -225,7 +227,6 @@ S3method(reparamSigDevn, asrtests)
 S3method(rmboundary, asreml)
 S3method(rmboundary, asrtests)
 S3method(setvarianceterms, call)
-S3method(setvarianceterms, asreml)
 S3method(simulate, asreml)
 S3method(sort, alldiffs)
 S3method(sort, predictions.frame)
