Set threads to 1 for Windows parallel processing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -227,6 +227,7 @@ S3method(reparamSigDevn, asrtests)
 S3method(rmboundary, asreml)
 S3method(rmboundary, asrtests)
 S3method(setvarianceterms, call)
+S3method(setvarianceterms, asreml)
 S3method(simulate, asreml)
 S3method(sort, alldiffs)
 S3method(sort, predictions.frame)
