--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: asremlPlus
-Version: 4.4.11
-Date: 2023-07-19
+Version: 4.4.12
+Date: 2023-08-02
 Title: Augments 'ASReml-R' in Fitting Mixed Models and Packages
         Generally in Exploring Prediction Differences
 Authors@R: person("Chris","Brien", role = c("aut","cre"),
@@ -9,7 +9,7 @@ Authors@R: person("Chris","Brien", role = c("aut","cre"),
 Depends: R (>= 3.5.0)
 Imports: dae, devtools, doParallel, dplyr,ggplot2, foreach, grDevices, graphics, methods, 
         qqplotr, parallel, reshape2, RColorBrewer, rlang, stats, stringr, sticky, utils
-Suggests: emmeans, lattice, lmerTest, pbkrtest, R.rsp, testthat
+Suggests: emmeans, lattice, lmerTest, pbkrtest, R.rsp, testthat, tictoc
 Enhances: asreml
 VignetteBuilder: R.rsp
 SystemRequirements: asreml
