--- a/NAMESPACE
+++ b/NAMESPACE
@@ -165,7 +165,8 @@ importFrom("methods", "formalArgs", "getFunction", "languageEl", "languageEl<-",
 importFrom("qqplotr", "stat_qq_band","stat_qq_line", "stat_qq_point")
 
 importFrom("reshape2", "melt")
-importFrom("utils", "data", "capture.output", "getFromNamespace", sessionInfo, "tail")
+importFrom("utils", "data", "capture.output", "getFromNamespace", "sessionInfo", "tail")
+importFrom("utils", "packageVersion")
 importFrom("foreach", "foreach", "%do%", "%dopar%")
 importFrom("parallel", "makeCluster", "stopCluster", "detectCores", "nextRNGStream")
 importFrom("doParallel", "registerDoParallel")
