Improvements to fitting spatial P-splines

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -179,6 +179,7 @@ S3method(addBacktransforms, alldiffs)
 S3method(addSpatialModel, asrtests)
 S3method(addSpatialModelOnIC, asrtests)
 S3method(allDifferences, data.frame)
+S3method(as.data.frame, effnames)
 S3method(changeModelOnIC, asrtests)
 S3method(bootREMLRT, asreml) 
 S3method(changeTerms, asrtests) 
