--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,37 +1,37 @@
 Package: asremlPlus
-Version: 4.4.25
-Date: 2023-01-15
+Version: 4.4.27
+Date: 2024-02-05
 Title: Augments 'ASReml-R' in Fitting Mixed Models and Packages
         Generally in Exploring Prediction Differences
 Authors@R: person("Chris","Brien", role = c("aut","cre"),
          comment = c(ORCID = "0000-0003-0581-1817"),
          email = "chris.brien@adelaide.edu.au")
 Depends: R (>= 3.5.0)
-Imports: dae, devtools, doParallel, dplyr, ggplot2, foreach, grDevices, graphics, methods, 
-        nloptr, qqplotr, parallel, reshape2, RColorBrewer, rlang, stats, stringr, sticky, utils
+Imports: dae, devtools, doParallel, dplyr, foreach, ggplot2, graphics, grDevices, methods, 
+        nloptr, parallel, qqplotr, RColorBrewer, reshape2, rlang, stats, sticky, stringr, utils
 Suggests: emmeans (>= 1.8.8), lattice, lmerTest, pbkrtest, R.rsp, testthat, tictoc
 Enhances: asreml
 VignetteBuilder: R.rsp
 SystemRequirements: asreml
 LazyData: true
 Description: Assists in automating the selection of terms to include in mixed models when  
-  'asreml' is used to fit the models. Also used to display, in tables and graphs, predictions   
-  obtained using any model fitting function and to explore differences between predictions. 
-  The content  falls into the following natural groupings: (i) Data, (ii) Object manipulation 
-  functions, (iii) Model modification functions, (iv) Model selection functions, (v) Model 
-  diagnostics and simulation functions, (vi) Prediction production and presentation 
-  functions, (vii) Response transformation functions, and (viii) Miscellaneous functions 
-  (for further details see 'asremlPlus-package' in help). A history of the fitting of a 
-  sequence of models is kept in a data frame. Procedures are available for choosing models 
-  that conform to the hierarchy or marginality principle, for fitting and choosing between 
+  'asreml' is used to fit the models. Procedures are available for choosing models that 
+  conform to the hierarchy or marginality principle, for fitting and choosing between 
   two-dimensional spatial models using correlation, natural cubic smoothing spline and 
-  P-spline models, for displaying predictions for significant terms in tables and graphs. 
-  The 'asreml' package provides a computationally efficient algorithm for fitting a wide 
-  range of linear mixed models using Residual Maximum Likelihood. It is a commercial 
-  package that can be purchased from 'VSNi' <https://vsni.co.uk/> as 'asreml-R', who will 
-  supply a zip file for local installation/updating (see <https://asreml.kb.vsni.co.uk/>). 
-  It is not needed for functions that are methods for 'alldiffs'  and 'data.frame' objects. 
-  The package 'asremPlus' can also be installed from <http://chris.brien.name/rpackages/>.
+  P-spline models. A history of the fitting of a sequence of models is kept in a data frame. 
+  Also used to compute functions and contrasts of, to investigate differences between and 
+  to plot predictions obtained using any model fitting function. The content  falls into 
+  the following natural groupings: (i) Data, (ii) Model modification functions, (iii) Model 
+  selection and description functions, (iv) Model diagnostics and simulation functions, 
+  (v) Prediction production and presentation functions, (vi) Response transformation 
+  functions, (vii) Object manipulation functions, and (viii) Miscellaneous functions 
+  (for further details see 'asremlPlus-package' in help). The 'asreml' package provides a 
+  computationally efficient algorithm for fitting a wide range of linear mixed models using 
+  Residual Maximum Likelihood. It is a commercial package and a license for it can be 
+  purchased from 'VSNi' <https://vsni.co.uk/> as 'asreml-R', who will supply a zip file 
+  for local installation/updating (see <https://asreml.kb.vsni.co.uk/>). It is not needed 
+  for functions that are methods for 'alldiffs'  and 'data.frame' objects. The package 
+  'asremPlus' can also be installed from <http://chris.brien.name/rpackages/>.
 License: MIT + file LICENSE
 URL: http://chris.brien.name
 BugReports: https://github.com/briencj/asremlPlus/issues
