--- a/NAMESPACE
+++ b/NAMESPACE
@@ -159,9 +159,9 @@ exportClasses(alldiffs, asrtests, predictions.frame)
 import(dae)
 import(ggplot2, except = "stat_qq_line")
 importFrom("stats", "as.formula",  "fitted", "fitted.values", "formula", "median", 
-                    "model.matrix", "na.omit", "optim", "pchisq", "pf", "predict", "pt", "qnorm", "qt", 
-                    "quantile", "resid", "pnorm", "rnorm", "runif", "simulate", "terms", 
-                    "terms.formula", "update.formula")
+                    "model.matrix", "na.omit", "optim", "pchisq", "pf", "predict", "pt", 
+                    "qnorm", "qt", "quantile", "resid", "pnorm", "rnorm", "runif", 
+                    "simulate", "terms", "terms.formula", "update.formula")
 importFrom("devtools", "load_all")
 importFrom("RColorBrewer", "brewer.pal")
 importFrom("grDevices", "savePlot")
@@ -177,8 +177,8 @@ importFrom("utils", "packageVersion")
 importFrom("foreach", "foreach", "%do%", "%dopar%")
 importFrom("parallel", "makeCluster", "stopCluster", "detectCores", "nextRNGStream")
 importFrom("doParallel", "registerDoParallel")
-importFrom("stringr", "str_count", "str_length", "str_locate", "str_locate_all", "str_replace", "str_replace_all", 
-           "str_split", "str_sub", "str_trim")
+importFrom("stringr", "str_c", "str_count", "str_length", "str_locate", "str_locate_all", 
+           "str_replace", "str_replace_all", "str_split", "str_split_1", "str_sub", "str_trim")
 importFrom("sticky", "sticky")
 S3method(addBacktransforms, alldiffs)
 S3method(addSpatialModel, asrtests)
